--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   flutter_native_splash: ^2.3.1
   permission_handler: ^10.0.0
   geolocator: ^9.0.2
+  http: ^0.13.4
+  url_launcher: ^6.1.11
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
