--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   url_launcher: ^6.1.11
   xml2json: ^5.3.1
   flutter_spinkit: ^5.1.0
+  kakaomap_webview: ^0.3.0
+  fluttertoast: ^8.0.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
