--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.2.0+16
+version: 1.3.0+17
 
 environment:
   sdk: '>=3.0.2 <4.0.0'
@@ -41,6 +41,7 @@ dependencies:
   fluttertoast: ^8.0.7
   async: ^2.3.0
   shared_preferences: ^2.2.0
+  custom_refresh_indicator: ^4.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
