--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.3.0+17
+version: 1.3.1+18
 
 environment:
   sdk: '>=3.0.2 <4.0.0'
@@ -34,7 +34,7 @@ dependencies:
   permission_handler: ^10.0.0
   geolocator: ^9.0.2
   http: ^0.13.4
-  url_launcher: ^6.1.11
+  url_launcher: ^6.3.0
   xml2json: ^5.3.1
   flutter_spinkit: ^5.1.0
   kakaomap_webview: ^0.3.0
@@ -42,6 +42,8 @@ dependencies:
   async: ^2.3.0
   shared_preferences: ^2.2.0
   custom_refresh_indicator: ^4.0.1
+  crystal_navigation_bar: ^1.0.0
+  iconly: ^1.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
